RM45565 fix text being cut off while printing in from IE

--- a/src/components/richtext/expandable.scss
+++ b/src/components/richtext/expandable.scss
@@ -59,6 +59,7 @@
       border-bottom: 0 none;
       padding-bottom: 0;
       padding-left: 0;
+      display: block;
     }
 
     &:hover {
